// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextInput /> disabled renders a disabled input 1`] = `
<div>
  <div
    class="Viewweb__View-sc-1cphyjf-0 lhSUkp Flexweb__Flex-ni2cjg-0 btLJAM"
  >
    <div
      class="Viewweb__View-sc-1cphyjf-0 lhSUkp Flexweb__Flex-ni2cjg-0 hjAxCH"
    >
      <div
        class="Viewweb__View-sc-1cphyjf-0 lhSUkp Flexweb__Flex-ni2cjg-0 jhuIde"
      >
        <div
          class="Viewweb__View-sc-1cphyjf-0 TextInputweb__FillContainer-sc-199z6oj-2 cBgQdA Spaceweb__Space-njatzl-0 jXWaIv Sizeweb__Size-sc-10bl685-0 jBHUZT"
          disabled=""
        >
          <div
            class="Viewweb__View-sc-1cphyjf-0 Labelweb__FloatView-jw60wd-0 lmieMq Spaceweb__Space-njatzl-0 eDHZqM"
          >
            <label
              class="Textweb__Text-sc-6jf9e4-0 Labelweb__StyledText-jw60wd-1 lfSTWH"
              color="shade.980"
              data-testid="ds-text"
              disabled=""
              for="Label"
              value=""
              width="medium"
            >
              Label
            </label>
          </div>
          <div
            class="Viewweb__View-sc-1cphyjf-0 TextInputweb__InputContainer-sc-199z6oj-0 btXkAA Sizeweb__Size-sc-10bl685-0 jAiJdI Flexweb__Flex-ni2cjg-0 jOkEVe"
          >
            <input
              class="TextInputweb__StyledInput-sc-199z6oj-1 cFjZzr Sizeweb__Size-sc-10bl685-0 fYTMIh Spaceweb__Space-njatzl-0 ka-DExz Flexweb__Flex-ni2cjg-0 libPPx"
              data-testid="ds-text-input"
              disabled=""
              id="Label"
              placeholder="Enter text here"
              type="text"
              value=""
            />
          </div>
          <div
            class="Viewweb__View-sc-1cphyjf-0 Lineweb__StyledLine-jxwo4z-0 ijeuir Sizeweb__Size-sc-10bl685-0 htlLka"
            disabled=""
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextInput /> label renders input with labelPosition on left and variant filled 1`] = `
<div>
  <div
    class="Viewweb__View-sc-1cphyjf-0 lhSUkp Flexweb__Flex-ni2cjg-0 btLJAM"
  >
    <div
      class="Viewweb__View-sc-1cphyjf-0 lhSUkp Flexweb__Flex-ni2cjg-0 hjAxCH"
    >
      <label
        class="Textweb__Text-sc-6jf9e4-0 Labelweb__StyledText-jw60wd-1 dGEJmw Spaceweb__Space-njatzl-0 iqcLxO"
        color="shade.980"
        data-testid="ds-text"
        value=""
        width="medium"
      >
        Example label
      </label>
      <div
        class="Viewweb__View-sc-1cphyjf-0 lhSUkp Flexweb__Flex-ni2cjg-0 jhuIde"
      >
        <div
          class="Viewweb__View-sc-1cphyjf-0 TextInputweb__FillContainer-sc-199z6oj-2 ioJDih Spaceweb__Space-njatzl-0 jXWaIv Sizeweb__Size-sc-10bl685-0 jBHUZT"
        >
          <div
            class="Viewweb__View-sc-1cphyjf-0 TextInputweb__InputContainer-sc-199z6oj-0 btXkAA Sizeweb__Size-sc-10bl685-0 jAiJdI Flexweb__Flex-ni2cjg-0 jOkEVe"
          >
            <input
              class="TextInputweb__StyledInput-sc-199z6oj-1 fTqBcg Sizeweb__Size-sc-10bl685-0 fYTMIh Spaceweb__Space-njatzl-0 dWKXUv Flexweb__Flex-ni2cjg-0 libPPx"
              data-testid="ds-text-input"
              id="Example label"
              placeholder="Enter text here"
              type="text"
              value=""
            />
          </div>
          <div
            class="Viewweb__View-sc-1cphyjf-0 Lineweb__StyledLine-jxwo4z-0 hZczNw Sizeweb__Size-sc-10bl685-0 htlLka"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextInput /> label renders input with labelPosition on top(default) and variant filled 1`] = `
<div>
  <div
    class="Viewweb__View-sc-1cphyjf-0 lhSUkp Flexweb__Flex-ni2cjg-0 btLJAM"
  >
    <label
      class="Textweb__Text-sc-6jf9e4-0 Labelweb__StyledText-jw60wd-1 cxwFhF Spaceweb__Space-njatzl-0 eDHZqM"
      color="shade.980"
      data-testid="ds-text"
      value=""
      width="medium"
    >
      Example label
    </label>
    <div
      class="Viewweb__View-sc-1cphyjf-0 lhSUkp Flexweb__Flex-ni2cjg-0 hjAxCH"
    >
      <div
        class="Viewweb__View-sc-1cphyjf-0 lhSUkp Flexweb__Flex-ni2cjg-0 jhuIde"
      >
        <div
          class="Viewweb__View-sc-1cphyjf-0 TextInputweb__FillContainer-sc-199z6oj-2 ioJDih Spaceweb__Space-njatzl-0 jXWaIv Sizeweb__Size-sc-10bl685-0 jBHUZT"
        >
          <div
            class="Viewweb__View-sc-1cphyjf-0 TextInputweb__InputContainer-sc-199z6oj-0 btXkAA Sizeweb__Size-sc-10bl685-0 jAiJdI Flexweb__Flex-ni2cjg-0 jOkEVe"
          >
            <input
              class="TextInputweb__StyledInput-sc-199z6oj-1 fTqBcg Sizeweb__Size-sc-10bl685-0 fYTMIh Spaceweb__Space-njatzl-0 dWKXUv Flexweb__Flex-ni2cjg-0 libPPx"
              data-testid="ds-text-input"
              id="Example label"
              placeholder="Enter text here"
              type="text"
              value=""
            />
          </div>
          <div
            class="Viewweb__View-sc-1cphyjf-0 Lineweb__StyledLine-jxwo4z-0 hZczNw Sizeweb__Size-sc-10bl685-0 htlLka"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextInput /> label renders input with labelPosition on top(default) and variant outlined 1`] = `
<div>
  <div
    class="Viewweb__View-sc-1cphyjf-0 lhSUkp Flexweb__Flex-ni2cjg-0 btLJAM"
  >
    <div
      class="Viewweb__View-sc-1cphyjf-0 lhSUkp Flexweb__Flex-ni2cjg-0 hjAxCH"
    >
      <div
        class="Viewweb__View-sc-1cphyjf-0 lhSUkp Flexweb__Flex-ni2cjg-0 jhuIde"
      >
        <div
          class="Viewweb__View-sc-1cphyjf-0 TextInputweb__FillContainer-sc-199z6oj-2 cBgQdA Spaceweb__Space-njatzl-0 jXWaIv Sizeweb__Size-sc-10bl685-0 jBHUZT"
        >
          <div
            class="Viewweb__View-sc-1cphyjf-0 Labelweb__FloatView-jw60wd-0 lmieMq Spaceweb__Space-njatzl-0 eDHZqM"
          >
            <label
              class="Textweb__Text-sc-6jf9e4-0 Labelweb__StyledText-jw60wd-1 dGEJmw"
              color="shade.980"
              data-testid="ds-text"
              for="Example label"
              value=""
              width="medium"
            >
              Example label
            </label>
          </div>
          <div
            class="Viewweb__View-sc-1cphyjf-0 TextInputweb__InputContainer-sc-199z6oj-0 btXkAA Sizeweb__Size-sc-10bl685-0 jAiJdI Flexweb__Flex-ni2cjg-0 jOkEVe"
          >
            <input
              class="TextInputweb__StyledInput-sc-199z6oj-1 bNedDc Sizeweb__Size-sc-10bl685-0 fYTMIh Spaceweb__Space-njatzl-0 ka-DExz Flexweb__Flex-ni2cjg-0 libPPx"
              data-testid="ds-text-input"
              id="Example label"
              placeholder="Enter text here"
              type="text"
              value=""
            />
          </div>
          <div
            class="Viewweb__View-sc-1cphyjf-0 Lineweb__StyledLine-jxwo4z-0 hZczNw Sizeweb__Size-sc-10bl685-0 htlLka"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextInput /> placeholder renders input with default placeholder if not provided as prop 1`] = `
<div>
  <div
    class="Viewweb__View-sc-1cphyjf-0 lhSUkp Flexweb__Flex-ni2cjg-0 btLJAM"
  >
    <div
      class="Viewweb__View-sc-1cphyjf-0 lhSUkp Flexweb__Flex-ni2cjg-0 hjAxCH"
    >
      <div
        class="Viewweb__View-sc-1cphyjf-0 lhSUkp Flexweb__Flex-ni2cjg-0 jhuIde"
      >
        <div
          class="Viewweb__View-sc-1cphyjf-0 TextInputweb__FillContainer-sc-199z6oj-2 cBgQdA Spaceweb__Space-njatzl-0 jXWaIv Sizeweb__Size-sc-10bl685-0 jBHUZT"
        >
          <div
            class="Viewweb__View-sc-1cphyjf-0 Labelweb__FloatView-jw60wd-0 lmieMq Spaceweb__Space-njatzl-0 eDHZqM"
          >
            <label
              class="Textweb__Text-sc-6jf9e4-0 Labelweb__StyledText-jw60wd-1 dGEJmw"
              color="shade.980"
              data-testid="ds-text"
              for="Label"
              value=""
              width="medium"
            >
              Label
            </label>
          </div>
          <div
            class="Viewweb__View-sc-1cphyjf-0 TextInputweb__InputContainer-sc-199z6oj-0 btXkAA Sizeweb__Size-sc-10bl685-0 jAiJdI Flexweb__Flex-ni2cjg-0 jOkEVe"
          >
            <input
              class="TextInputweb__StyledInput-sc-199z6oj-1 bNedDc Sizeweb__Size-sc-10bl685-0 fYTMIh Spaceweb__Space-njatzl-0 ka-DExz Flexweb__Flex-ni2cjg-0 libPPx"
              data-testid="ds-text-input"
              id="Label"
              placeholder="Enter text here"
              type="text"
              value=""
            />
          </div>
          <div
            class="Viewweb__View-sc-1cphyjf-0 Lineweb__StyledLine-jxwo4z-0 hZczNw Sizeweb__Size-sc-10bl685-0 htlLka"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextInput /> placeholder renders input with provided placeholder 1`] = `
<div>
  <div
    class="Viewweb__View-sc-1cphyjf-0 lhSUkp Flexweb__Flex-ni2cjg-0 btLJAM"
  >
    <div
      class="Viewweb__View-sc-1cphyjf-0 lhSUkp Flexweb__Flex-ni2cjg-0 hjAxCH"
    >
      <div
        class="Viewweb__View-sc-1cphyjf-0 lhSUkp Flexweb__Flex-ni2cjg-0 jhuIde"
      >
        <div
          class="Viewweb__View-sc-1cphyjf-0 TextInputweb__FillContainer-sc-199z6oj-2 cBgQdA Spaceweb__Space-njatzl-0 jXWaIv Sizeweb__Size-sc-10bl685-0 jBHUZT"
        >
          <div
            class="Viewweb__View-sc-1cphyjf-0 Labelweb__FloatView-jw60wd-0 lmieMq Spaceweb__Space-njatzl-0 eDHZqM"
          >
            <label
              class="Textweb__Text-sc-6jf9e4-0 Labelweb__StyledText-jw60wd-1 dGEJmw"
              color="shade.980"
              data-testid="ds-text"
              for="Label"
              value=""
              width="medium"
            >
              Label
            </label>
          </div>
          <div
            class="Viewweb__View-sc-1cphyjf-0 TextInputweb__InputContainer-sc-199z6oj-0 btXkAA Sizeweb__Size-sc-10bl685-0 jAiJdI Flexweb__Flex-ni2cjg-0 jOkEVe"
          >
            <input
              class="TextInputweb__StyledInput-sc-199z6oj-1 bNedDc Sizeweb__Size-sc-10bl685-0 fYTMIh Spaceweb__Space-njatzl-0 ka-DExz Flexweb__Flex-ni2cjg-0 libPPx"
              data-testid="ds-text-input"
              id="Label"
              placeholder="Example Placeholder"
              type="text"
              value=""
            />
          </div>
          <div
            class="Viewweb__View-sc-1cphyjf-0 Lineweb__StyledLine-jxwo4z-0 hZczNw Sizeweb__Size-sc-10bl685-0 htlLka"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextInput /> variant renders filled variant with default props 1`] = `
<div>
  <div
    class="Viewweb__View-sc-1cphyjf-0 lhSUkp Flexweb__Flex-ni2cjg-0 btLJAM"
  >
    <label
      class="Textweb__Text-sc-6jf9e4-0 Labelweb__StyledText-jw60wd-1 cxwFhF Spaceweb__Space-njatzl-0 eDHZqM"
      color="shade.980"
      data-testid="ds-text"
      value=""
      width="medium"
    >
      Label
    </label>
    <div
      class="Viewweb__View-sc-1cphyjf-0 lhSUkp Flexweb__Flex-ni2cjg-0 hjAxCH"
    >
      <div
        class="Viewweb__View-sc-1cphyjf-0 lhSUkp Flexweb__Flex-ni2cjg-0 jhuIde"
      >
        <div
          class="Viewweb__View-sc-1cphyjf-0 TextInputweb__FillContainer-sc-199z6oj-2 ioJDih Spaceweb__Space-njatzl-0 jXWaIv Sizeweb__Size-sc-10bl685-0 jBHUZT"
        >
          <div
            class="Viewweb__View-sc-1cphyjf-0 TextInputweb__InputContainer-sc-199z6oj-0 btXkAA Sizeweb__Size-sc-10bl685-0 jAiJdI Flexweb__Flex-ni2cjg-0 jOkEVe"
          >
            <input
              class="TextInputweb__StyledInput-sc-199z6oj-1 fTqBcg Sizeweb__Size-sc-10bl685-0 fYTMIh Spaceweb__Space-njatzl-0 dWKXUv Flexweb__Flex-ni2cjg-0 libPPx"
              data-testid="ds-text-input"
              id="Label"
              placeholder="Enter text here"
              type="text"
              value=""
            />
          </div>
          <div
            class="Viewweb__View-sc-1cphyjf-0 Lineweb__StyledLine-jxwo4z-0 hZczNw Sizeweb__Size-sc-10bl685-0 htlLka"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextInput /> variant renders outlined variant with default props 1`] = `
<div>
  <div
    class="Viewweb__View-sc-1cphyjf-0 lhSUkp Flexweb__Flex-ni2cjg-0 btLJAM"
  >
    <div
      class="Viewweb__View-sc-1cphyjf-0 lhSUkp Flexweb__Flex-ni2cjg-0 hjAxCH"
    >
      <div
        class="Viewweb__View-sc-1cphyjf-0 lhSUkp Flexweb__Flex-ni2cjg-0 jhuIde"
      >
        <div
          class="Viewweb__View-sc-1cphyjf-0 TextInputweb__FillContainer-sc-199z6oj-2 cBgQdA Spaceweb__Space-njatzl-0 jXWaIv Sizeweb__Size-sc-10bl685-0 jBHUZT"
        >
          <div
            class="Viewweb__View-sc-1cphyjf-0 Labelweb__FloatView-jw60wd-0 lmieMq Spaceweb__Space-njatzl-0 eDHZqM"
          >
            <label
              class="Textweb__Text-sc-6jf9e4-0 Labelweb__StyledText-jw60wd-1 dGEJmw"
              color="shade.980"
              data-testid="ds-text"
              for="Label"
              value=""
              width="medium"
            >
              Label
            </label>
          </div>
          <div
            class="Viewweb__View-sc-1cphyjf-0 TextInputweb__InputContainer-sc-199z6oj-0 btXkAA Sizeweb__Size-sc-10bl685-0 jAiJdI Flexweb__Flex-ni2cjg-0 jOkEVe"
          >
            <input
              class="TextInputweb__StyledInput-sc-199z6oj-1 bNedDc Sizeweb__Size-sc-10bl685-0 fYTMIh Spaceweb__Space-njatzl-0 ka-DExz Flexweb__Flex-ni2cjg-0 libPPx"
              data-testid="ds-text-input"
              id="Label"
              placeholder="Enter text here"
              type="text"
              value=""
            />
          </div>
          <div
            class="Viewweb__View-sc-1cphyjf-0 Lineweb__StyledLine-jxwo4z-0 hZczNw Sizeweb__Size-sc-10bl685-0 htlLka"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextInput /> width renders input with auto width 1`] = `
<div>
  <div
    class="Viewweb__View-sc-1cphyjf-0 lhSUkp Flexweb__Flex-ni2cjg-0 btLJAM"
  >
    <div
      class="Viewweb__View-sc-1cphyjf-0 lhSUkp Flexweb__Flex-ni2cjg-0 hjAxCH"
    >
      <div
        class="Viewweb__View-sc-1cphyjf-0 lhSUkp Flexweb__Flex-ni2cjg-0 fsjcxB"
      >
        <div
          class="Viewweb__View-sc-1cphyjf-0 TextInputweb__FillContainer-sc-199z6oj-2 cBgQdA Spaceweb__Space-njatzl-0 jXWaIv Sizeweb__Size-sc-10bl685-0 jBHUZT"
        >
          <div
            class="Viewweb__View-sc-1cphyjf-0 Labelweb__FloatView-jw60wd-0 lmieMq Spaceweb__Space-njatzl-0 eDHZqM"
          >
            <label
              class="Textweb__Text-sc-6jf9e4-0 Labelweb__StyledText-jw60wd-1 dGEJmw"
              color="shade.980"
              data-testid="ds-text"
              for="Label"
              value=""
              width="auto"
            >
              Label
            </label>
          </div>
          <div
            class="Viewweb__View-sc-1cphyjf-0 TextInputweb__InputContainer-sc-199z6oj-0 btXkAA Sizeweb__Size-sc-10bl685-0 HOkBi Flexweb__Flex-ni2cjg-0 jOkEVe"
          >
            <input
              class="TextInputweb__StyledInput-sc-199z6oj-1 bNedDc Sizeweb__Size-sc-10bl685-0 fYTMIh Spaceweb__Space-njatzl-0 ka-DExz Flexweb__Flex-ni2cjg-0 libPPx"
              data-testid="ds-text-input"
              id="Label"
              placeholder="Enter text here"
              type="text"
              value=""
            />
          </div>
          <div
            class="Viewweb__View-sc-1cphyjf-0 Lineweb__StyledLine-jxwo4z-0 hZczNw Sizeweb__Size-sc-10bl685-0 htlLka"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextInput /> width renders input with medium(default) width 1`] = `
<div>
  <div
    class="Viewweb__View-sc-1cphyjf-0 lhSUkp Flexweb__Flex-ni2cjg-0 btLJAM"
  >
    <div
      class="Viewweb__View-sc-1cphyjf-0 lhSUkp Flexweb__Flex-ni2cjg-0 hjAxCH"
    >
      <div
        class="Viewweb__View-sc-1cphyjf-0 lhSUkp Flexweb__Flex-ni2cjg-0 jhuIde"
      >
        <div
          class="Viewweb__View-sc-1cphyjf-0 TextInputweb__FillContainer-sc-199z6oj-2 cBgQdA Spaceweb__Space-njatzl-0 jXWaIv Sizeweb__Size-sc-10bl685-0 jBHUZT"
        >
          <div
            class="Viewweb__View-sc-1cphyjf-0 Labelweb__FloatView-jw60wd-0 lmieMq Spaceweb__Space-njatzl-0 eDHZqM"
          >
            <label
              class="Textweb__Text-sc-6jf9e4-0 Labelweb__StyledText-jw60wd-1 dGEJmw"
              color="shade.980"
              data-testid="ds-text"
              for="Label"
              value=""
              width="medium"
            >
              Label
            </label>
          </div>
          <div
            class="Viewweb__View-sc-1cphyjf-0 TextInputweb__InputContainer-sc-199z6oj-0 btXkAA Sizeweb__Size-sc-10bl685-0 jAiJdI Flexweb__Flex-ni2cjg-0 jOkEVe"
          >
            <input
              class="TextInputweb__StyledInput-sc-199z6oj-1 bNedDc Sizeweb__Size-sc-10bl685-0 fYTMIh Spaceweb__Space-njatzl-0 ka-DExz Flexweb__Flex-ni2cjg-0 libPPx"
              data-testid="ds-text-input"
              id="Label"
              placeholder="Enter text here"
              type="text"
              value=""
            />
          </div>
          <div
            class="Viewweb__View-sc-1cphyjf-0 Lineweb__StyledLine-jxwo4z-0 hZczNw Sizeweb__Size-sc-10bl685-0 htlLka"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextInput /> width renders input with small width 1`] = `
<div>
  <div
    class="Viewweb__View-sc-1cphyjf-0 lhSUkp Flexweb__Flex-ni2cjg-0 btLJAM"
  >
    <div
      class="Viewweb__View-sc-1cphyjf-0 lhSUkp Flexweb__Flex-ni2cjg-0 hjAxCH"
    >
      <div
        class="Viewweb__View-sc-1cphyjf-0 lhSUkp Flexweb__Flex-ni2cjg-0 jhuIde"
      >
        <div
          class="Viewweb__View-sc-1cphyjf-0 TextInputweb__FillContainer-sc-199z6oj-2 cBgQdA Spaceweb__Space-njatzl-0 jXWaIv Sizeweb__Size-sc-10bl685-0 jBHUZT"
        >
          <div
            class="Viewweb__View-sc-1cphyjf-0 Labelweb__FloatView-jw60wd-0 lmieMq Spaceweb__Space-njatzl-0 eDHZqM"
          >
            <label
              class="Textweb__Text-sc-6jf9e4-0 Labelweb__StyledText-jw60wd-1 dGEJmw"
              color="shade.980"
              data-testid="ds-text"
              for="Label"
              value=""
              width="small"
            >
              Label
            </label>
          </div>
          <div
            class="Viewweb__View-sc-1cphyjf-0 TextInputweb__InputContainer-sc-199z6oj-0 btXkAA Sizeweb__Size-sc-10bl685-0 iGFYJZ Flexweb__Flex-ni2cjg-0 jOkEVe"
          >
            <input
              class="TextInputweb__StyledInput-sc-199z6oj-1 bNedDc Sizeweb__Size-sc-10bl685-0 fYTMIh Spaceweb__Space-njatzl-0 ka-DExz Flexweb__Flex-ni2cjg-0 libPPx"
              data-testid="ds-text-input"
              id="Label"
              placeholder="Enter text here"
              type="text"
              value=""
            />
          </div>
          <div
            class="Viewweb__View-sc-1cphyjf-0 Lineweb__StyledLine-jxwo4z-0 hZczNw Sizeweb__Size-sc-10bl685-0 htlLka"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
